--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
     text-align: center;
 }
 
+.navbar li:last-child {
+    float: right;
+}
+
 .navbar ul {
     list-style-type: none;
     margin: 0;
@@ -36,9 +40,16 @@
 }
 
 
-/* About.js */
+/* ContactUs.js */
 
-.about {
+.contact-us {
+    text-align: center;
+}
+
+
+/* Timeline.js */
+
+.timeline {
     text-align: center;
 }
 
