Finished first page

--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,7 @@ img {
     color: black;
     padding: 14px 16px;
     text-decoration: none;
+    cursor: pointer;
 }
 
 
@@ -96,6 +97,7 @@ img {
 
 .home {
     border: 60px solid #9AD6F3;
+    background-color: #EAF6FC;
     text-align: center;
 }
 
@@ -109,6 +111,67 @@ img {
     width: 95%;
     margin: 0 2.5% 15%;
     padding: 13% 0 19%;
+}
+
+
+/* FirstPage.js */
+
+.first-page {
+    text-align: end;
+    padding-top: 15%;
+    border: 1px solid black;
+}
+
+.first-page-logo {
+    position: absolute;
+    left: 300px;
+    top: 80px;
+    z-index: 50;
+}
+
+.first-page-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    text-align: center;
+    position: relative;
+    z-index: 100;
+    padding-top: 10%;
+}
+
+.first-page-container img:first-child {
+    padding-left: 8%;
+}
+
+.first-page-container-info {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    background-image: url('/images/islands/island1.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding: 5% 6% 7% 1%;
+    height: 22vh;
+    width: 18%;
+    margin-bottom: 3%;
+}
+
+.first-page-container-info p {
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.first-page-container-info p:last-child {
+    cursor: pointer;
+    border-radius: 10px;
+    background-color: #A1D9F4;
+    padding: 3% 0;
+}
+
+.first-page img:last-child {
+    position: relative;
+    left: 55px;
+    margin-bottom: 5%;
 }
 
 
