--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@500&family=Archivo:wght@500&display=swap');
+
 body {
     margin: 0;
     font-family: 'M PLUS 1p', sans-serif;
@@ -100,8 +102,43 @@ img {
 }
 
 .home-controls {
-    padding-bottom: 20%;
+    background-image: url('/images/islands/island5.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    font-family: 'Barlow';
+    font-size: 72px;
+    font-weight: 300;
+    width: 95%;
+    margin: 0 2.5% 15%;
+    padding: 13% 0 19%;
 }
+
+.aboutIsland  {
+    background-image: url('/images/islands/island2.png');
+    background-size: contain;
+    background-repeat: no-repeat;;
+    width: 95%;
+    margin: 2 2.5% 15%;
+    padding: 4% 0 19%;
+}
+
+
+.aboutIsland #about-title {
+    font-family: 'Archivo', sans-serif;
+    font-size: 3.8vw;
+    font-weight: 500;
+    padding-top: 1.5%;
+    padding-bottom: 3%;
+}
+
+
+ .aboutIsland #about-body {
+    font-family: 'Poppins';
+    font-size: 1.4vw;
+    font-weight: 300;
+    margin: 0 10% 19%;
+    padding-right: 5%;
+ }
 
 
 
@@ -114,6 +151,29 @@ img {
 .timeline-title {
     font-family: 'Open Sans';
     font-size: 64px;
+}
+
+.timeline-submarine {
+    display: flex;
+    justify-content: space-between;
+    background-image: url('/images/timeline/submarine5.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 30% 20% 15%;
+}
+
+.timeline-active {
+    /* background-image: url('/images/timeline/submarine3.png'); */
+}
+
+.timeline-submarine p {
+    background-color: #E3F4F0;
+    border: 10px solid white;
+    border-radius: 50%;
+    padding: 0 2.5%;
+    font-size: 45px;
+    font-weight: 300;
 }
 
 
@@ -154,7 +214,7 @@ img {
     margin: 0 10px;
 }
 
-.footer-icons a:hover {
+.footer-container-icons a:hover {
     margin: 0 50px;
 }
 
