--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,7 @@ img {
 
 /* Home.js */
 
+
 .home {
     border: 60px solid #9AD6F3;
     background-color: #EAF6FC;
@@ -113,6 +114,9 @@ img {
     margin: 0 2.5% 15%;
     padding: 13% 0 19%;
 }
+
+
+/*AboutIsland.js */
 
 .aboutIsland {
     background-image: url('/images/islands/island2.png');
@@ -257,6 +261,7 @@ img {
     }
 }
 
+/* ControlIsland */
 
 
 /* FirstPage.js */
