--- a/src/App.css
+++ b/src/App.css
@@ -111,13 +111,103 @@ img {
     background-size: contain;
     background-repeat: no-repeat;
     font-family: 'Barlow';
-    font-size: 6vw;
+    font-size: 30%;
     font-weight: 300;
     width: 95%;
-    margin: 0 2.5% 15%;
+    margin: 0 23.5% 15%;
     padding: 13% 0 19%;
+    text-align: center;
 }
 
+.home-controls p {
+    margin-top: -4%;
+    margin-left: -43%;
+    margin-bottom: 0;
+    font-size: 3vw;
+}
+
+.home-controls:hover {
+    opacity:80%;
+}
+
+/*MeetOurRobot.js */
+
+
+.meet-robot {
+    margin-left: 15%;
+    margin-bottom:12%
+} 
+
+.meet-robot .meet-robot-top-section {
+    margin-left: -30%;
+}
+
+.meet-robot .meet-robot-top-section .meet-robot-bubble2 {
+    margin-left: 27%;
+    margin-bottom: 1%;
+}
+
+.meet-robot p {
+    font-family:'Barlow';
+    font-size: 3vw;
+    text-align: center;
+    margin-right: 58%;
+    padding-bottom: 0%;
+    font-weight: 600;
+}
+
+.meet-robot .bubble-group {
+    padding-bottom: 10%;
+    margin-top: -8%
+}
+
+.meet-robot .meet-robot-bubble1 {
+  height: 2vw;
+  width: 2vw;
+  background-color: #9CBCCC;
+  border-radius: 50%;
+  animation: pulse 5s infinite;
+  margin-left: 30%;
+}
+
+.meet-robot .meet-robot-bubble2{ 
+    height: 2vw;
+    width: 2vw;
+    background-color: #9CBCCC;
+    border-radius: 50%;
+    animation: pulse 5s infinite;
+    margin-left: 32%;
+}
+
+.meet-robot .meet-robot-bubble3 {
+    height: 1vw;
+    width: 1vw;
+    background-color: #9CBCCC;
+    border-radius: 50%;
+    animation: pulse 5s infinite;
+    margin-left: 30%; 
+}
+
+.meet-robot .meet-robot-turtle {
+    transform: matrix(-0.96, 0.28, 0.28, 0.96, 0, 0);
+    width: 20%;
+    margin-left: -80%;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(.7);
+        transform: translate(0%, 50%);
+    }
+    50% {
+        transform: scale(1.5);
+        transform: translate(50%, -50%);
+    }
+    100% {
+        transform: scale(.7);
+        transform: translate(0%, 50%);
+    }
+}
 
 /*AboutIsland.js */
 
@@ -145,18 +235,22 @@ img {
     padding-right: 5%;
  }
 
+
+/*NameIsland */
+
 .nameIsland {
     background-image: url('/images/islands/island4.png');
     background-size: contain;
     background-repeat: no-repeat;
-    margin: 0 2.5% 0%;
+    margin: 0 10% 0%;
     padding: 4.5% 0 10%;
-    width: 50%;
+    width:50%;
  }
+
 
 .nameIsland #name-title {
     font-family: 'Archivo', sans-serif;
-    font-size: 3.8vw;
+    font-size: 2.9vw;
     font-weight: 500;
     padding-top: 1.5%;
     padding-bottom: 1%;
@@ -166,7 +260,7 @@ img {
 
 .nameIsland #name-subtitle {
     font-family: 'Archivo', sans-serif;
-    font-size: 2.05vw;
+    font-size: 1.8vw;
     font-weight: 500;
     padding-top: 1.5%;
     padding-bottom: 1%;
@@ -183,83 +277,31 @@ img {
     margin-right: 7%;
 }
 
-
-
-/* MeetOurRobot.js */
-
-
-.meet-robot {
-    margin-left: 5%;
-} 
-
-.meet-robot .meet-robot-top-section {
-    margin-left: -30%;
-}
-
-.meet-robot .meet-robot-top-section .meet-robot-bubble2 {
-    margin-left: 25%
-}
-
-.meet-robot p {
-    font-family:'Barlow';
-    font-size: 4vw;
-    text-align: center;
-    margin-right: 58%;
-    padding-bottom: 0%;
-}
-
-.meet-robot .bubble-group {
-    padding-bottom: 10%;
-    margin-top: -8%
-}
-
-.meet-robot .meet-robot-bubble1 {
-  height: 2vw;
-  width: 2vw;
-  background-color: #9CBCCC;
-  border-radius: 50%;
-  animation: pulse 5s infinite;
-  margin-left: 30%;
-}
-
-.meet-robot .meet-robot-bubble2{ 
-    height: 4vw;
-    width: 4vw;
+.nameIsland-bubble1 {
+    width:1vw;
+    height: 1vw;
     background-color: #9CBCCC;
     border-radius: 50%;
-    animation: pulse 5s infinite;
-    margin-left: 34%;
+    margin-left:150%;
 }
 
-.meet-robot .meet-robot-bubble3 {
-    height: 3vw;
-    width: 3vw;
+.nameIsland-bubble2 {
+    width:1vw;
+    height: 1vw;
     background-color: #9CBCCC;
     border-radius: 50%;
-    animation: pulse 5s infinite;
-    margin-left: 30%; 
+    margin-left:148%;
 }
 
-.meet-robot .meet-robot-turtle {
-    transform: matrix(-0.96, 0.28, 0.28, 0.96, 0, 0);
-    width: 20%;
-    margin-left: -80%;
+.nameIsland-bubble3 {
+    width:1vw;
+    height: 1vw;
+    background-color: #9CBCCC;
+    border-radius: 50%;
+    margin-left:152%;
 }
 
-@keyframes pulse {
-    0% {
-        transform: scale(.7);
-        transform: translate(0%, 50%);
-    }
-    50% {
-        transform: scale(1.5);
-        transform: translate(50%, -50%);
-    }
-    100% {
-        transform: scale(.7);
-        transform: translate(0%, 50%);
-    }
-}
+
 
 /* ControlIsland */
 
@@ -416,13 +458,13 @@ img {
 
 .footer-container-title{
     font-family: 'M PLUS 1p';
-    font-size: 64px;
+    font-size: 4vw;
     margin: 0;
 }
 
 .footer-container-email {
-    font-family: 'Poppins';
-    font-size: 43px;
+    font-family: 'Barlow';
+    font-size: 3vw;
     font-weight: 300;
     margin: 0 0 2%;
 }
@@ -441,5 +483,12 @@ img {
 
 .footer-text {
     font-family: 'Poppins';
-    font-size: 30px;
+    font-size: 1.5vw;
 }
+
+.footer-wie-club-button {
+    display:flex;
+    margin-top:-3%;
+
+}
+
