--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,6 @@ img {
 
 /* Home.js */
 
-
 .home {
     border: 60px solid #9AD6F3;
     background-color: #EAF6FC;
@@ -143,7 +142,8 @@ img {
 
 .first-page-container-info p:first-child {
     font-family: 'Montserrat';
-    font-size: 25px;
+    /* font-size: 25px; */
+    font-size: 2vw;
     font-weight: bold;
 }
 
