--- a/src/App.css
+++ b/src/App.css
@@ -256,8 +256,16 @@ img {
 .model-view {
     /* display: block; */
     margin: 0 10% 0%;
-    width:560px;
-    height:315px;
+    /* width: 560px;
+    height: 315px; */
+    border: 5px solid black;
+}
+
+.model-view-robot {
+    background-color: #455A64 !important;
+    background-color: yellow !important;
+    width: 100%;
+    border: 5px solid black;
 }
 
 /* NameIsland.js */
